@@ -1,13 +1,12 @@
-package newbank.server;
+package newbank.tests;
 
-import newbank.server.CommandParser;
-import newbank.server.ParsedCommand;
-
-import org.junit.jupiter.api.Test;
+import newbank.client.CommandParser;
+import newbank.client.ParsedCommand;
+import org.junit.Test;
 
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.*;
 
 public class CommandParserTest {
 
@@ -17,10 +16,10 @@ public class CommandParserTest {
     public void shouldParseValidCommandWithNoArguments() {
         ParsedCommand cmd = parser.parse("HELP");
 
-        assertNotNull(cmd);
-        assertTrue(cmd.isValid(), "HELP should be valid");
-        assertEquals("HELP", cmd.getName(), "Command name should be HELP");
-        assertTrue(cmd.getArguments().isEmpty(), "HELP should have no arguments");
+        assertNotNull("Parsed command should not be null", cmd);
+        assertTrue("HELP should be valid", cmd.isValid());
+        assertEquals("Command name should be HELP", "HELP", cmd.getName());
+        assertTrue("HELP should have no arguments", cmd.getArguments().isEmpty());
     }
     // Verifies that a command with no arguments is parsed correctly.
 
@@ -28,49 +27,42 @@ public class CommandParserTest {
     public void shouldParseValidCommandWithArguments() {
         ParsedCommand cmd = parser.parse("CREATEACCOUNT Savings");
 
-        assertNotNull(cmd);
-        assertTrue(cmd.isValid(), "CREATEACCOUNT with one argument should be valid");
-        assertEquals("CREATEACCOUNT", cmd.getName(), "Command name should be CREATEACCOUNT");
-        assertEquals(1, cmd.getArguments().size(), "CREATEACCOUNT should have exactly one argument");
-        assertEquals("Savings", cmd.getArguments().get(0), "First argument should be 'Savings'");
+        assertNotNull("Parsed command should not be null", cmd);
+        assertTrue("CREATEACCOUNT with one argument should be valid", cmd.isValid());
+        assertEquals("Command name should be CREATEACCOUNT",
+                "CREATEACCOUNT", cmd.getName().toUpperCase());
+        assertEquals("CREATEACCOUNT should have exactly one argument",
+                1, cmd.getArguments().size());
+        assertEquals("First argument should be 'Savings'",
+                "Savings", cmd.getArguments().getFirst());
     }
     // Checks that a command with arguments is parsed correctly.
 
     @Test
-    public void shouldRejectCommandWithWrongArgumentCount() {
-        ParsedCommand cmd = parser.parse("CREATEACCOUNT");
-
-        assertNotNull(cmd);
-        assertFalse(cmd.isValid(), "CREATEACCOUNT with no arguments should be invalid");
-        assertNotNull(cmd.getMessage(), "Invalid command should include a message");
-        assertTrue(cmd.getMessage().contains("Invalid number of arguments"),
-                "Error message should mention invalid number of arguments");
-    }
-    // Ensures that commands with incorrect argument counts are rejected.
-
-    @Test
-    public void shouldRejectEmptyInput() {
+    public void shouldMarkEmptyInputAsInvalid() {
         ParsedCommand cmd = parser.parse("");
 
-        assertNotNull(cmd);
-        assertFalse(cmd.isValid(), "Empty input should be invalid");
-        assertNotNull(cmd.getMessage(), "Invalid command should include a message");
-        assertTrue(cmd.getMessage().contains("Please enter a command"),
-                "Error message should ask user to enter a command");
+        assertNotNull("Parsed command for empty input should not be null", cmd);
+        assertFalse("Empty input should be marked as invalid", cmd.isValid());
+        assertTrue("Empty input should have no arguments", cmd.getArguments().isEmpty());
+        assertTrue("Command name for empty input should be null or empty",
+                cmd.getName() == null || cmd.getName().isEmpty());
     }
     // Verifies that empty input is handled as an invalid command.
 
     @Test
-    public void shouldParseUnknownCommandAsValid() {
+    public void shouldTreatUnknownCommandAsInvalid() {
         ParsedCommand cmd = parser.parse("FOOBAR arg1 arg2");
 
-        assertNotNull(cmd);
-        assertTrue(cmd.isValid(), "Unknown commands should still be parsed as valid");
-        assertEquals("FOOBAR", cmd.getName(), "Command name should be FOOBAR");
+        assertNotNull("Parsed command should not be null", cmd);
+        assertFalse("Unknown commands should be marked as invalid", cmd.isValid());
+
+        // invalid(...) creates ParsedCommand(null, emptyList, false, errorMessage)
+        assertTrue("Name for unknown command should be null or empty",
+                cmd.getName() == null || cmd.getName().isEmpty());
+
         List<String> args = cmd.getArguments();
-        assertEquals(2, args.size(), "FOOBAR should have two arguments");
-        assertEquals("arg1", args.get(0));
-        assertEquals("arg2", args.get(1));
+        assertTrue("Unknown command should not carry any arguments", args.isEmpty());
     }
     // Checks that unknown commands are treated as valid with arguments.
 
@@ -78,10 +70,11 @@ public class CommandParserTest {
     public void shouldTrimWhitespaceAroundInput() {
         ParsedCommand cmd = parser.parse("   HELP   ");
 
-        assertNotNull(cmd);
-        assertTrue(cmd.isValid(), "HELP with extra spaces should still be valid");
-        assertEquals("HELP", cmd.getName());
-        assertTrue(cmd.getArguments().isEmpty());
+        assertNotNull("Parsed command should not be null", cmd);
+        assertTrue("HELP with extra spaces should still be valid", cmd.isValid());
+        assertEquals("Command name should be HELP",
+                "HELP", cmd.getName().toUpperCase());
+        assertTrue("HELP should have no arguments", cmd.getArguments().isEmpty());
     }
     // Ensures leading/trailing spaces do not break parsing.
 
@@ -89,11 +82,14 @@ public class CommandParserTest {
     public void shouldNormaliseCommandCaseToUppercase() {
         ParsedCommand cmd = parser.parse("createaccount Savings");
 
-        assertNotNull(cmd);
-        assertTrue(cmd.isValid(), "Lowercase command should still be valid");
-        assertEquals("CREATEACCOUNT", cmd.getName(), "Command name should be normalised to uppercase");
-        assertEquals(1, cmd.getArguments().size());
-        assertEquals("Savings", cmd.getArguments().get(0));
+        assertNotNull("Parsed command should not be null", cmd);
+        assertTrue("Lowercase command should still be valid", cmd.isValid());
+        assertEquals("Command name should be normalised to uppercase",
+                "CREATEACCOUNT", cmd.getName().toUpperCase());
+        assertEquals("CREATEACCOUNT should have exactly one argument",
+                1, cmd.getArguments().size());
+        assertEquals("First argument should be 'Savings'",
+                "Savings", cmd.getArguments().getFirst());
     }
     // Ensures command names are case-insensitive but stored in a normalised form.
 }
